--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,8 +7,8 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
-background-size: cover;
-background-position: center;
+    overflow: hidden;
+
     &:first-child {
       margin-right: 7.5px;
     }
@@ -20,6 +20,27 @@ background-position: center;
       margin-left: 7.5px;
     }
 
+     .background-image {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+    }
+
+    &:hover {
+      cursor: pointer;
+
+      & .background-image {
+        transform: scale(1.1);
+        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      }
+
+      & .content {
+        opacity: 0.9;
+      }
+    }
+
+
     .content {
       height: 90px;
       padding: 0 25px;
@@ -28,8 +49,12 @@ background-position: center;
       align-items: center;
       justify-content: center;
       border: 1px solid black;
+      background-color: rgb(255, 255, 255);
+      opacity: 0.8;
+      position: absolute;
 
       .title {
+
         font-weight: bold;
         margin-bottom: 6px;
         font-size: 22px;
